2002-11-03  Dmitry G. Mastrukov  <dmitry@taurussoft.org>

	* configure.in: Added Belarusian to ALL_LINGUAS

2002-11-01  Mikael Hallendal  <micke@codefactory.se>

	* Release 2.1.2

	* NEWS: Updated for 2.1.2

	* configure.in: 
	- Bumped to 2.1.2
	- Require gtkhtml2 2.1.2

2002-10-29  Richard Hult  <rhult@codefactory.se>

	* src/yelp-html-gtkhtml2.c (yelp_html_find): Implement find
	backward.

	* src/yelp-window.c (window_find_response_cb)
	(window_find_delete_event_cb, window_find_cb): Use the find
	dialog.
	(window_find_again_cb): Implement.

	* src/yelp-html-gtkhtml2.c (yelp_html_find): Implement find
	forward.

	* data/ui/yelp.glade: Steal galeons find dialog.

	* configure.in: Add libglade dependency.

2002-10-27  Richard Hult  <rhult@codefactory.se>

	* src/yelp-pregenerate.c (main): Don't create GNodes with g_new,
	use g_node_new. Fixes a crash.
	(parse_section): Initialize variables and break out of loop when
	we have a match.

2002-10-26  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-base.c: removed unused struct type.

2002-10-21  Mikael Hallendal  <micke@codefactory.se>

	* Released 2.1.1

	* NEWS: updated for 2.1.1

	* configure.in: 
	- bumped version to 2.1.1
	- depend on gtkhtml2 2.1.1

2002-10-21  Richard Hult  <rhult@codefactory.se>

	* src/yelp-view-content.c (content_show_uri): Ditto.

	* src/yelp-view-index.c (index_show_uri): Put head tag around meta
	and title tags.

	* src/yelp-main.c (main): Remove unused variable.
	Include string.h to avoid warnings.

	* src/yelp-view-content.c (content_show_uri): Don't try to set
	focus on view, use view->widget.

	* src/yelp-view-toc.c (toc_get_html):
	* src/yelp-view-index.c (index_get_html):
	* src/yelp-view.c (yelp_view_get_html): Implement
	YelpView::get_html.

	* src/yelp-view.h: Add virtual function get_html that returns the
	YelpHtml used by the view.

	* src/yelp-html-gtkhtml2.c (yelp_html_find_next): Implement.

	* src/yelp-html.h (yelp_html_find_next): Add virtual function
	find_next.
