@@ -309,13 +309,17 @@ main (int argc, char **argv)
 		flag = TRUE;
         }
 
-	if (!factory) {
-		BonoboGenericFactory   *factory;
-		/* Not started, start now */
+	if (!factory) { /* Not started, start now */ 
+		BonoboGenericFactory *factory;
+		char                 *registration_id;
 
-		factory = bonobo_generic_factory_new (YELP_FACTORY_OAFIID,
+		registration_id = bonobo_activation_make_registration_id (
+					YELP_FACTORY_OAFIID,
+					gdk_display_get_name (gdk_display_get_default ()));
+		factory = bonobo_generic_factory_new (registration_id,
 						      main_base_factory,
 						      NULL);
+		g_free (registration_id);
 
 		bonobo_running_context_auto_exit_unref (BONOBO_OBJECT (factory));
         
