@@ -1,3 +1,10 @@
+2002-11-08  Mark McLoughlin  <mark@skynet.ie>
+
+	* src/yelp-main.c: (main): register yelp with
+	bonobo-activation server on a per-display basis
+	so that we get a new instace per display/screen.
+	Fixes #91983.
+
 2002-11-03  Dmitry G. Mastrukov  <dmitry@taurussoft.org>
 
 	* configure.in: Added Belarusian to ALL_LINGUAS
